Make voice orb primary and show chat popup on start

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="voice-hint">Click start, speak naturally, then press hang up to end.</div>
       </section>
 
-      <div class="chat-stack">
+      <div class="chat-stack chat-popup">
         <section class="panel chat-panel">
           <div class="chat-header">
             <div>
