Swap orb to logo and remove top banner

--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
 </head>
 <body>
   <div class="page">
-    <header class="topbar">
-      <div class="brand">
-        <img class="brand-mark" src="assets/brand/logos/PSS_Logo_Navy.png" alt="PSS logo" />
-        <div class="brand-text">
-          <div class="brand-title">Premium Sports Solutions</div>
-          <div class="brand-subtitle">Smarter football decisions</div>
-        </div>
-      </div>
-      <div class="model-pill">openai/gpt-oss-120b:free</div>
-    </header>
-
     <main class="layout">
       <section class="panel voice-panel">
         <h2>VOICE</h2>
         <p class="muted">Kora stays live until you hang up.</p>
         <button id="voiceOrb" class="voice-orb" type="button" aria-label="Start or stop Kora">
-          <span class="orb-core"></span>
+          <img class="orb-logo" src="assets/brand/logos/PSS_Logo_Navy.png" alt="PSS logo" />
           <span class="orb-ring"></span>
         </button>
         <div class="voice-label" id="voiceStatus">Kora idle</div>
